# kore

./: .gitignore  CITATION.cff  LICENSE  README.md  build_paper.sh  make_arxiv.sh  pyproject.toml
code/kore/: __init__.py  baselines.py  datasets.py  experiments.py  figures.py  intrinsic.py  lib.py  sklearn.py  verify_concentration.py
code/tests/: test_instrumentation.py  test_run_real_data_chunked.py  test_sklearn_adapter.py  test_staged_dispatch.py  test_worker_cap.py
paper/: .latexmkrc  LICENSE  kore.bst  kore.sty  main.bbl  main.tex  references.bib
results/: benchmark.csv  benchmark_method_summary.csv  benchmark_method_summary_main.csv  benchmark_summary.csv  concentration_envelope.csv  dataset_metadata.csv  degree_ablation.csv  degree_ablation_summary.csv  discovery.csv  frontier_method_summary.csv  frontier_replicates.csv  frontier_summary.csv  law_collapse.csv  method_failure_fractions.csv  noise_sweep.csv  noise_sweep_summary.csv  plugin_consistency.csv  plugin_consistency_summary.csv  real_data.csv  real_data_bootstrap_ranks.csv  real_data_failure_modes.csv  real_data_friedman.json  real_data_joint_significance.csv  real_data_pareto.csv  real_data_ranks.csv  real_data_significance.csv  real_data_stage_events.csv  real_data_subset.csv  real_data_summary.csv  real_data_threshold_sensitivity.csv  robustness.csv  scaling.csv
