[project]
name = "kore"
version = "1.0.0"
description = "Solve for the Hyperparameter, Skip the Search: Kolmogorov-Optimal Scaling Laws for Spline Regression"
license = { text = "MIT" }
authors = [
    { name = "Yong Yi Bay" },
    { name = "Kathleen A. Yearick" },
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
    "scikit-learn>=1.4,<2",
    "joblib>=1.3,<2",
    "pyarrow>=15,<22",
    "openpyxl>=3.1.5",
    "threadpoolctl>=3.6.0",
    "psutil>=5.9",
    "adjusttext>=1.3.0",
]

[project.optional-dependencies]
# Optional baselines for the real-world benchmark in Section 4.x. Each
# is gated behind a try/except in code/kore/baselines.py so the core
# experiment driver still runs if any of these fails to install on a
# given Python or platform combination. pyGAM and CatBoost are the most
# likely to be missing under Python 3.13; the benchmark uses the
# remaining 19 methods in that case.
benchmark = [
    "xgboost>=2.0,<4",
    "lightgbm>=4.0,<5",
    "catboost>=1.2,<2",
    "pygam>=0.9,<1",
    "optuna>=3.5,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code/kore"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["code/tests"]
pythonpath = ["code"]
addopts = "-ra --strict-markers"
